<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/flexgo_top_app_bar"
            app:titleTextColor="?attr/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/vehicle_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/list_vehicles"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/vehicle_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/vehicles_search"
                app:layout_constraintBottom_toBottomOf="@id/selected_vehicle"
                app:layout_constraintStart_toStartOf="@id/vehicle_type"
                app:layout_constraintTop_toTopOf="@id/selected_vehicle"
                app:srcCompat="@drawable/ic_search"
                app:tint="?attr/iconTint" />

            <TextView
                android:id="@+id/selected_vehicle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_textview_background"
                android:fontFamily="@font/exo_2_bold"
                android:gravity="center"
                android:hint="@string/hint_list_vehicles"
                android:padding="4dp"
                android:textColor="?attr/roundedTextViewTextColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vehicle_search"
                app:layout_constraintTop_toBottomOf="@id/vehicle_type"
                tools:text="Carro 1 - Fiat Argo" />

            <ImageView
                android:id="@+id/icon_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/average_consumption"
                app:layout_constraintStart_toStartOf="@id/vehicle_search"
                app:layout_constraintTop_toTopOf="@id/average_consumption"
                app:srcCompat="@drawable/ic_car"
                app:tint="?attr/iconTint" />

            <TextView
                android:id="@+id/average_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/average_consumption"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/icon_car"
                app:layout_constraintTop_toBottomOf="@id/selected_vehicle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/km_l_etanol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/ethanol_km_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/icon_car"
                app:layout_constraintTop_toBottomOf="@id/average_consumption">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/km_l_gasoline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/gasoline_km_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/km_l_etanol"
                app:layout_constraintTop_toBottomOf="@+id/km_l_etanol">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icon_gas_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/fuel_price"
                app:layout_constraintStart_toStartOf="@+id/km_l_gasoline"
                app:layout_constraintTop_toTopOf="@+id/fuel_price"
                app:srcCompat="@drawable/ic_gas"
                app:tint="?attr/iconTint" />

            <TextView
                android:id="@+id/fuel_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/fuel_price"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/icon_gas_station"
                app:layout_constraintTop_toBottomOf="@+id/km_l_gasoline" />

            <TextView
                android:id="@+id/ethanol_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/ethanol_price"
                android:textColor="?attr/roundedTextViewBackground"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/icon_gas_station"
                app:layout_constraintTop_toBottomOf="@+id/fuel_price" />

            <EditText
                android:id="@+id/ethanol_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="5"
                app:layout_constraintEnd_toStartOf="@id/clear_ethanol_price"
                app:layout_constraintStart_toStartOf="@id/ethanol_price"
                app:layout_constraintTop_toBottomOf="@id/ethanol_price" />

            <ImageButton
                android:id="@+id/clear_ethanol_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear_ethanol_price"
                app:layout_constraintBottom_toBottomOf="@id/ethanol_price_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ethanol_price_value"
                app:srcCompat="@drawable/ic_clear"
                app:tint="?attr/iconTint" />

            <TextView
                android:id="@+id/gasoline_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/gasoline_price"
                android:textColor="?attr/roundedTextViewBackground"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/ethanol_price_value"
                app:layout_constraintTop_toBottomOf="@+id/ethanol_price_value" />

            <EditText
                android:id="@+id/gasoline_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="5"
                app:layout_constraintEnd_toStartOf="@id/clear_gasoline_price"
                app:layout_constraintStart_toStartOf="@id/gasoline_price"
                app:layout_constraintTop_toBottomOf="@id/gasoline_price" />

            <ImageButton
                android:id="@+id/clear_gasoline_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear_gasoline_price"
                app:layout_constraintBottom_toBottomOf="@id/gasoline_price_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/gasoline_price_value"
                app:srcCompat="@drawable/ic_clear"
                app:tint="?attr/iconTint" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/calculate"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gasoline_price_value" />

            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:gravity="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate" />

            <TextView
                android:id="@+id/result_analysis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/green_secondary_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result" />

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_2_bold"
                android:text="@string/clear"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_analysis" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>